[package]
name = "aoc-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
aoc-parse = "0.1.9"
substring = "1.4.5"
hex = "0.4.3"
rand = "0.8.4"
itertools = "0.7.8"
md5 = "0.7.0"
